# src/handler/api/routes/user/user-router.ts
@@ -1,0 +1,15 @@
+import { Router } from "express";
+import type { Container } from "inversify";
+import { buildFindUserHandler } from "./find-user-handler";
+
+export const buildUserRouter = ({
+  container,
+}: {
+  container: Container;
+}): Router => {
+  const userRouter = Router({ mergeParams: true });
+
+  userRouter.get("/", buildFindUserHandler({ container }));
+
+  return userRouter;
+};
